# gusto-datasystem

./: CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml
common/: L07-config  README  config.gusto  config.ini  findSCANS.py  flagdefs.py  scans.txt
docs/: conduct.rst  debug.rst  index.rst  installing.rst  using.rst
level0.5/: Makefile  README.md  run_level05.sh
level0.5/src/: Makefile  README  callback.c  callback.h  corrspec.c  corrspec.h  erfinv.c  influx.c  influx.h  run_level05.sh
level0.7/: .gitignore  Makefile  README.md
level0.7/src/: L07-config  L07-pipeline.py  README
level0.8/: Makefile  README.md
level0.8/src/: L08-pipeline.py  README  acs3-scans.txt  acs5-scans.txt  check-seq.py  config.ini  findSCANS.py  make_L2.py  set_bad_chflag.py  set_noisy_rowflag.py
level0.9/: .gitignore  CONDUCT.rst  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements.txt
level0.9/docs/: Makefile  conf.py  make.bat
level0.9/src/: README
level0.9/src/gustoL09P/: GL095Pipeline.py  GL09PCLArgParser.py  GL09PCheckFileExists.py  GL09PConfigClass.py  GL09PDataIO.py  GL09PLogger.py  GL09PParameters.py  GL09PProcessControl.py  GL09PUtils.py  GL09Pipeline.py  GL09PipelineSetupClass.py  GL09Pipeline_unused.py  GL100Pipeline.py  GL101Pipeline.py  GL10Pipeline.py  GUSTOCreateConfigFile.py  __meta__.py  execGUSTOL09P.py  test_20230609120657.csv
level0.9/src/gustoL09P/Data/: ACS3_B2_pixel_masks.txt  ACS5_B1_pixel_masks.txt  GL09P_debug.txt  GL09P_setup_pars.txt  GL09P_setup_pars.txt~  GL09P_setup_pars_debug.txt  GUSTO_Baseline_Data_draft4.xlsx  README_scripts  flagdefs.py
level0.9/src/gustoL09P/support/: GUSTO_create_master_table.py  GUSTO_select_lb_region.py
level0.95/: Makefile
level0.95/src/: README
level1/: Makefile
level1/src/: README
level2/: Makefile
level2/src/: README  align_b2m5.fits  align_b2m8.fits  make_L2.py
level2/src/GPS/: 2024-12-OTF.ipynb  2024-12-tot-power.ipynb  2025-01-OTF.ipynb  2025-01w-OTF.ipynb  OTFRegridder-multiprocess.py
src/GUSTO_Pipeline/: .gitignore  Configuration.py  DataIO.py  L05_lagstospectra.py  L07_telemetry.py  L08_chanflags.py  L09_calibrate.py  L10_pointing.py  L20_regridder.py  Logger.py  Pipeline.py  README-L07.md  README-L08.md  README.md  Utils.py  __init__.py  config.gusto  flagdefs.py
src/GUSTO_Pipeline/GUSTO_Pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/GUSTO_Pipeline/calib/: IF.txt  README  dataLog.txt  offsets.txt
src/GUSTO_Pipeline/level0.5/: .gitignore  README.md  run_level05.sh
src/level0.5/: coeffs.txt  run_level05.sh
src/level0.5/src/: callback.c  (+1 more)
utils/: GUSTO.cat  GUSTOgridder.py  align_pixels.py  apply_mixer_offset.py  bundle_data.py  check_THOT.py  findIF.sh  grid_otf.py  make_L2.py  spurCandidate.py  update_mixer_offset.py
(+4 files in other folders)
